updating docs and tutorials

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -119,7 +119,7 @@
 <li><a href="pathpy/algorithms/trees.html">pathpy.algorithms.trees</a></li>
 <li><a href="pathpy/converters/networkx.html">pathpy.converters.networkx</a></li>
 <li><a href="pathpy/core/classes.html">pathpy.core.classes</a></li>
-<li><a href="pathpy/core/collecions.html">pathpy.core.collecions</a></li>
+<li><a href="pathpy/core/collections.html">pathpy.core.collections</a></li>
 <li><a href="pathpy/core/edge.html">pathpy.core.edge</a></li>
 <li><a href="pathpy/core/node.html">pathpy.core.node</a></li>
 <li><a href="pathpy/core/path.html">pathpy.core.path</a></li>
