--- a/_modules/pathpy/core/node.html
+++ b/_modules/pathpy/core/node.html
@@ -124,7 +124,7 @@
 
 <span class="kn">from</span> <span class="nn">pathpy</span> <span class="kn">import</span> <span class="n">logger</span>
 <span class="kn">from</span> <span class="nn">pathpy.core.classes</span> <span class="kn">import</span> <span class="n">BaseNode</span>
-<span class="kn">from</span> <span class="nn">pathpy.core.collecions</span> <span class="kn">import</span> <span class="n">BaseCollection</span>
+<span class="kn">from</span> <span class="nn">pathpy.core.collections</span> <span class="kn">import</span> <span class="n">BaseCollection</span>
 
 <span class="c1"># create logger for the Node class</span>
 <span class="n">LOG</span> <span class="o">=</span> <span class="n">logger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
