--- a/_modules/pathpy/core/path.html
+++ b/_modules/pathpy/core/path.html
@@ -125,7 +125,7 @@
 
 <span class="kn">from</span> <span class="nn">pathpy</span> <span class="kn">import</span> <span class="n">logger</span>
 <span class="kn">from</span> <span class="nn">pathpy.core.classes</span> <span class="kn">import</span> <span class="n">BasePath</span>
-<span class="kn">from</span> <span class="nn">pathpy.core.collecions</span> <span class="kn">import</span> <span class="n">BaseCollection</span>
+<span class="kn">from</span> <span class="nn">pathpy.core.collections</span> <span class="kn">import</span> <span class="n">BaseCollection</span>
 <span class="kn">from</span> <span class="nn">pathpy.core.node</span> <span class="kn">import</span> <span class="n">Node</span><span class="p">,</span> <span class="n">NodeCollection</span>
 <span class="kn">from</span> <span class="nn">pathpy.core.edge</span> <span class="kn">import</span> <span class="n">Edge</span><span class="p">,</span> <span class="n">EdgeCollection</span>
 
