--- a/genindex.html
+++ b/genindex.html
@@ -826,15 +826,13 @@
       <ul>
         <li><a href="generated/pathpy.io.graphml.read_network.html#pathpy.io.graphml.read_network">(in module pathpy.io.graphml)</a>
 </li>
-        <li><a href="generated/pathpy.io.konect.read_network.html#pathpy.io.konect.read_network">(in module pathpy.io.konect)</a>
-</li>
         <li><a href="generated/pathpy.io.sql.read_network.html#pathpy.io.sql.read_network">(in module pathpy.io.sql)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.io.graphtool.read_netzschleuder_network.html#pathpy.io.graphtool.read_netzschleuder_network">read_netzschleuder_network() (in module pathpy.io.graphtool)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.io.graphtool.read_netzschleuder_record.html#pathpy.io.graphtool.read_netzschleuder_record">read_netzschleuder_record() (in module pathpy.io.graphtool)</a>
 </li>
       <li><a href="generated/pathpy.io.csv.read_pathcollection.html#pathpy.io.csv.read_pathcollection">read_pathcollection() (in module pathpy.io.csv)</a>
@@ -845,6 +843,8 @@
         <li><a href="generated/pathpy.io.sql.read_temporal_network.html#pathpy.io.sql.read_temporal_network">(in module pathpy.io.sql)</a>
 </li>
       </ul></li>
+      <li><a href="generated/pathpy.io.konect.read_tsv_network.html#pathpy.io.konect.read_tsv_network">read_tsv_network() (in module pathpy.io.konect)</a>
+</li>
       <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.remove">remove() (pathpy.statistics.subpaths.SubPathCollection method)</a>
 </li>
       <li><a href="generated/pathpy.Network.remove_edge.html#pathpy.Network.remove_edge">remove_edge() (pathpy.Network method)</a>
