--- a/_modules/pathpy/algorithms/centralities.html
+++ b/_modules/pathpy/algorithms/centralities.html
@@ -131,16 +131,15 @@
 <span class="kn">from</span> <span class="nn">pathpy.algorithms</span> <span class="kn">import</span> <span class="n">shortest_paths</span>
 <span class="kn">from</span> <span class="nn">pathpy.algorithms.matrices</span> <span class="kn">import</span> <span class="n">adjacency_matrix</span>
 
-<span class="kn">from</span> <span class="nn">pathpy.core.collecions</span> <span class="kn">import</span> <span class="n">BaseCollection</span>
+<span class="kn">from</span> <span class="nn">pathpy.core.collections</span> <span class="kn">import</span> <span class="n">BaseCollection</span>
 <span class="kn">from</span> <span class="nn">pathpy.models.classes</span> <span class="kn">import</span> <span class="n">BaseModel</span>
 <span class="kn">from</span> <span class="nn">pathpy.models.models</span> <span class="kn">import</span> <span class="n">ABCHigherOrderNetwork</span>
 
-
 <span class="c1"># pseudo load class for type checking</span>
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
-    <span class="kn">from</span> <span class="nn">pathpy.core.path</span> <span class="kn">import</span> <span class="n">PathCollection</span>
-    <span class="kn">from</span> <span class="nn">pathpy.core.network</span> <span class="kn">import</span> <span class="n">Network</span>
-    <span class="kn">from</span> <span class="nn">pathpy.models.higher_order_network</span> <span class="kn">import</span> <span class="n">HigherOrderNetwork</span>
+    <span class="kn">from</span> <span class="nn">pathpy.core.api</span> <span class="kn">import</span> <span class="n">PathCollection</span>
+    <span class="kn">from</span> <span class="nn">pathpy.models.api</span> <span class="kn">import</span> <span class="n">Network</span>
+    <span class="kn">from</span> <span class="nn">pathpy.models.api</span> <span class="kn">import</span> <span class="n">HigherOrderNetwork</span>
 
 <span class="c1"># create logger</span>
 <span class="n">LOG</span> <span class="o">=</span> <span class="n">logger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
