--- a/_modules/pathpy/algorithms/path_extraction.html
+++ b/_modules/pathpy/algorithms/path_extraction.html
@@ -126,9 +126,9 @@
 
 <span class="kn">from</span> <span class="nn">pathpy</span> <span class="kn">import</span> <span class="n">logger</span>
 
-<span class="kn">from</span> <span class="nn">pathpy.core.node</span> <span class="kn">import</span> <span class="n">NodeCollection</span>
-<span class="kn">from</span> <span class="nn">pathpy.core.edge</span> <span class="kn">import</span> <span class="n">EdgeCollection</span>
-<span class="kn">from</span> <span class="nn">pathpy.core.path</span> <span class="kn">import</span> <span class="n">PathCollection</span>
+<span class="kn">from</span> <span class="nn">pathpy.core.api</span> <span class="kn">import</span> <span class="n">NodeCollection</span>
+<span class="kn">from</span> <span class="nn">pathpy.core.api</span> <span class="kn">import</span> <span class="n">EdgeCollection</span>
+<span class="kn">from</span> <span class="nn">pathpy.core.api</span> <span class="kn">import</span> <span class="n">PathCollection</span>
 
 <span class="kn">from</span> <span class="nn">pathpy.models.models</span> <span class="kn">import</span> <span class="p">(</span><span class="n">ABCDirectedAcyclicGraph</span><span class="p">,</span>
                                   <span class="n">ABCTemporalNetwork</span><span class="p">)</span>
