--- a/_modules/pathpy/converters/networkx.html
+++ b/_modules/pathpy/converters/networkx.html
@@ -124,10 +124,9 @@
 <span class="kn">from</span> <span class="nn">collections</span> <span class="kn">import</span> <span class="n">defaultdict</span><span class="p">,</span> <span class="n">deque</span>
 
 <span class="kn">from</span> <span class="nn">pathpy</span> <span class="kn">import</span> <span class="n">logger</span>
+<span class="kn">from</span> <span class="nn">pathpy.models.api</span> <span class="kn">import</span> <span class="n">Network</span>
 
-<span class="kn">from</span> <span class="nn">pathpy.core.network</span> <span class="kn">import</span> <span class="n">Network</span>
-
-<div class="viewcode-block" id="to_networkx"><a class="viewcode-back" href="../../../generated/pathpy.converters.to_networkx.html#pathpy.converters.to_networkx">[docs]</a><span class="k">def</span> <span class="nf">to_networkx</span><span class="p">(</span><span class="n">network</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Any</span><span class="p">:</span>
+<div class="viewcode-block" id="to_networkx"><a class="viewcode-back" href="../../../generated/pathpy.converters.to_networkx.html#pathpy.converters.to_networkx">[docs]</a><span class="k">def</span> <span class="nf">to_networkx</span><span class="p">(</span><span class="n">network</span><span class="p">:</span> <span class="n">Network</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Any</span><span class="p">:</span>
 
     <span class="kn">from</span> <span class="nn">networkx</span> <span class="kn">import</span> <span class="n">Graph</span><span class="p">,</span> <span class="n">DiGraph</span><span class="p">,</span> <span class="n">MultiDiGraph</span><span class="p">,</span> <span class="n">MultiGraph</span>
 
@@ -145,7 +144,7 @@
                      <span class="n">network</span><span class="o">.</span><span class="n">edges</span><span class="p">[</span><span class="n">e</span><span class="p">]</span><span class="o">.</span><span class="n">attributes</span><span class="o">.</span><span class="n">to_dict</span><span class="p">())</span> <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">network</span><span class="o">.</span><span class="n">edges</span><span class="o">.</span><span class="n">uids</span><span class="p">])</span>
     <span class="k">return</span> <span class="n">G</span></div>
 
-<div class="viewcode-block" id="from_networkx"><a class="viewcode-back" href="../../../generated/pathpy.converters.from_networkx.html#pathpy.converters.from_networkx">[docs]</a><span class="k">def</span> <span class="nf">from_networkx</span><span class="p">(</span><span class="n">graph</span><span class="p">:</span> <span class="n">Any</span><span class="p">):</span>
+<div class="viewcode-block" id="from_networkx"><a class="viewcode-back" href="../../../generated/pathpy.converters.from_networkx.html#pathpy.converters.from_networkx">[docs]</a><span class="k">def</span> <span class="nf">from_networkx</span><span class="p">(</span><span class="n">graph</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Network</span><span class="p">:</span>
     <span class="n">n</span> <span class="o">=</span> <span class="n">Network</span><span class="p">(</span><span class="n">directed</span><span class="o">=</span><span class="n">graph</span><span class="o">.</span><span class="n">is_directed</span><span class="p">(),</span> <span class="n">multiedges</span><span class="o">=</span><span class="n">graph</span><span class="o">.</span><span class="n">is_multigraph</span><span class="p">())</span>
     <span class="k">for</span> <span class="n">v</span> <span class="ow">in</span> <span class="n">graph</span><span class="o">.</span><span class="n">nodes</span><span class="p">:</span>
         <span class="n">n</span><span class="o">.</span><span class="n">add_node</span><span class="p">(</span><span class="n">v</span><span class="p">,</span> <span class="o">**</span><span class="n">graph</span><span class="o">.</span><span class="n">nodes</span><span class="p">[</span><span class="n">v</span><span class="p">])</span>
