--- a/_modules/pathpy/io/sql.html
+++ b/_modules/pathpy/io/sql.html
@@ -120,18 +120,17 @@
 <span class="c1"># =============================================================================</span>
 
 <span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">annotations</span>
-<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">TYPE_CHECKING</span><span class="p">,</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">cast</span><span class="p">,</span> <span class="n">Union</span>
-
+<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">TYPE_CHECKING</span><span class="p">,</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Union</span><span class="p">,</span> <span class="n">cast</span>
 <span class="kn">import</span> <span class="nn">sqlite3</span>
-<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>  <span class="c1"># pylint: disable=import-error</span>
 
 <span class="kn">from</span> <span class="nn">pathpy</span> <span class="kn">import</span> <span class="n">logger</span>
-<span class="kn">from</span> <span class="nn">pathpy.io.pandas</span> <span class="kn">import</span> <span class="n">to_network</span><span class="p">,</span> <span class="n">to_temporal_network</span><span class="p">,</span> <span class="n">to_dataframe</span>
+<span class="kn">from</span> <span class="nn">pathpy.io.pandas</span> <span class="kn">import</span> <span class="n">to_dataframe</span><span class="p">,</span> <span class="n">to_network</span><span class="p">,</span> <span class="n">to_temporal_network</span>
+
+<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>  <span class="c1"># pylint: disable=import-error</span>
 
 <span class="c1"># pseudo load class for type checking</span>
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
-    <span class="kn">from</span> <span class="nn">pathpy.core.network</span> <span class="kn">import</span> <span class="n">Network</span>
-    <span class="kn">from</span> <span class="nn">pathpy.models.temporal_network</span> <span class="kn">import</span> <span class="n">TemporalNetwork</span>
+    <span class="kn">from</span> <span class="nn">pathpy.models.api</span> <span class="kn">import</span> <span class="n">Network</span><span class="p">,</span> <span class="n">TemporalNetwork</span>
 
 
 <span class="c1"># create logger</span>
