--- a/_modules/pathpy/statistics/likelihoods.html
+++ b/_modules/pathpy/statistics/likelihoods.html
@@ -122,13 +122,11 @@
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">Tuple</span><span class="p">,</span> <span class="n">Optional</span>
 <span class="kn">from</span> <span class="nn">functools</span> <span class="kn">import</span> <span class="n">singledispatch</span>
 <span class="kn">from</span> <span class="nn">collections</span> <span class="kn">import</span> <span class="n">Counter</span>
-<span class="kn">import</span> <span class="nn">datetime</span>
-<span class="kn">import</span> <span class="nn">sys</span>
 <span class="kn">from</span> <span class="nn">scipy</span> <span class="kn">import</span> <span class="n">sparse</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 
 <span class="kn">from</span> <span class="nn">pathpy</span> <span class="kn">import</span> <span class="n">config</span><span class="p">,</span> <span class="n">logger</span><span class="p">,</span> <span class="n">tqdm</span>
-<span class="kn">from</span> <span class="nn">pathpy.core.base.classes</span> <span class="kn">import</span> <span class="n">BaseHigherOrderNetwork</span>
+<span class="kn">from</span> <span class="nn">pathpy.models.models</span> <span class="kn">import</span> <span class="n">ABCHigherOrderNetwork</span>
 
 
 <span class="c1"># create logger</span>
@@ -140,7 +138,7 @@
     <span class="sd">&quot;&quot;&quot;Returns the likelihood given some observations.&quot;&quot;&quot;</span></div>
 
 
-<span class="nd">@likelihood</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">BaseHigherOrderNetwork</span><span class="p">)</span>
+<span class="nd">@likelihood</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">ABCHigherOrderNetwork</span><span class="p">)</span>
 <span class="k">def</span> <span class="nf">_hon</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">observations</span><span class="p">:</span> <span class="n">Any</span><span class="p">,</span> <span class="n">log</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
     <span class="sd">&quot;&quot;&quot;Returns the likelihood of a higher order network</span>
 <span class="sd">    given some observations.&quot;&quot;&quot;</span>
