--- a/_modules/pathpy/statistics/modularity.html
+++ b/_modules/pathpy/statistics/modularity.html
@@ -125,7 +125,7 @@
 
 <span class="c1"># pseudo load class for type checking</span>
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
-    <span class="kn">from</span> <span class="nn">pathpy.models.network</span> <span class="kn">import</span> <span class="n">Network</span>
+    <span class="kn">from</span> <span class="nn">pathpy.models.api</span> <span class="kn">import</span> <span class="n">Network</span>
 
 
 <span class="c1"># create logger for the Plot class</span>
